resolved task and members crud

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .js --fix",
+    "format": "prettier --write \"**/*.js\"",
+    "db:seed": "node scripts/seed.js",
+    "db:reset": "node scripts/reset.js"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +39,8 @@
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "eslint": "^8.57.0",
+    "prettier": "^3.2.5"
   }
 }
